--- a/src/FerrumCapital.API/appsettings.json
+++ b/src/FerrumCapital.API/appsettings.json
@@ -8,6 +8,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Token": {
+    "SecurityKey": "f41cd4f2-525f-42d0-a815-8e6cdda06b00",
+    "Issuer": "www.ferrumcapitalapi.com",
+    "Audience": "www.ferrumcapitalui.com"
+  },
   "AllowedHosts": "*"
 
 }
